# CudaDemo

./: .gitignore  README.md
self_attention/: CMakeLists.txt  build_pure_c_version.sh  kernel.cu  scaled_dot_product_attention.h  scaled_dot_product_attention_kernel.cpp  scaled_dot_product_attention_kernel_pure_c.cu  scaled_dot_product_attention_kernel_with_torch.cu  setup.py  use_demo.py
self_attention/scaled_dot_product_attention.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
